--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
 * {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
@@ -11,13 +13,13 @@ body {
     align-items: center;
     flex-direction: column;
     font-family: "Poppins", sans-serif;
-    margin: 0;
-    min-height: 100vh;
+    margin-top: 25px;
+    min-height: 90vh;
 }
 
 h1 {
     color: #B1BABA;
-    font-size: 10rem;
+    font-size: 5rem;
     text-align: center;
     opacity: 0.4;
 }
@@ -25,7 +27,7 @@ h1 {
 form {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     max-width: 100%;
-    width: 400px;
+    width: 320px;
 }
 
 .input {
@@ -33,7 +35,7 @@ form {
     outline: none;
     color: #3c5353;
     background-color: #627575;
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 1rem 2rem;
     display: block;
     width: 100%;
@@ -53,8 +55,9 @@ form {
 .todos li {
     border-top: 1px solid #3c5353;
     cursor: pointer;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     padding: 1rem 2rem;
+    word-wrap: break-word;
 }
 
 .todos li.completed {
